--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "@types/core-js": "~0.9.34",
     "@types/marked": "~0.0.28",
     "@types/requirejs": "~2.1.28",
-    "@types/tether": "~1.1.27",
+    "@types/tether": "1.4.0",
     "angular2-template-loader": "~0.6.0",
-    "autoprefixer": "~6.5.3",
+    "autoprefixer": "6.6.1",
     "awesome-typescript-loader": "3.0.0-beta.17",
     "browser-sync": "^2.18.2",
     "connect-history-api-fallback": "1.3.0",
@@ -82,7 +82,7 @@
     "json-loader": "0.5.4",
     "markdown-loader": "^0.1.7",
     "marked": "^0.3.6",
-    "npm-run-all": "3.1.1",
+    "npm-run-all": "4.0.0",
     "postcss-cli": "2.6.0",
     "pre-commit": "^1.1.3",
     "raw-loader": "0.5.1",
