--- a/package.json
+++ b/package.json
@@ -48,30 +48,30 @@
     "rxjs": "^5.0.1"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.2",
-    "@angular/compiler": "^2.4.2",
-    "@angular/compiler-cli": "^2.4.2",
-    "@angular/core": "^2.4.2",
-    "@angular/forms": "^2.4.2",
-    "@angular/http": "^2.4.2",
-    "@angular/platform-browser": "^2.4.2",
-    "@angular/platform-browser-dynamic": "^2.4.2",
-    "@angular/router": "^3.4.2",
+    "@angular/common": "^2.4.4",
+    "@angular/compiler": "^2.4.4",
+    "@angular/compiler-cli": "^2.4.4",
+    "@angular/core": "^2.4.4",
+    "@angular/forms": "^2.4.4",
+    "@angular/http": "^2.4.4",
+    "@angular/platform-browser": "^2.4.4",
+    "@angular/platform-browser-dynamic": "^2.4.4",
+    "@angular/router": "^3.4.4",
     "@types/core-js": "~0.9.34",
     "@types/marked": "~0.0.28",
     "@types/requirejs": "~2.1.28",
-    "@types/tether": "1.4.0",
+    "@types/tether": "^1.4.0",
     "angular2-template-loader": "~0.6.0",
-    "autoprefixer": "6.6.1",
-    "awesome-typescript-loader": "3.0.0-beta.17",
+    "autoprefixer": "^6.6.1",
+    "awesome-typescript-loader": "3.0.0-beta.18",
     "browser-sync": "^2.18.2",
     "connect-history-api-fallback": "1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "2.4.1",
-    "cpr": "2.0.0",
+    "cpr": "^2.0.2",
     "css-loader": "^0.26.0",
     "express": "4.14.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "extract-text-webpack-plugin": "2.0.0-beta.5",
     "fsmonitor": "0.2.4",
     "fuse.js": "^2.5.0",
     "git-directory-deploy": "^1.5.1",
@@ -87,17 +87,17 @@
     "pre-commit": "^1.1.3",
     "raw-loader": "0.5.1",
     "rimraf": "^2.5.4",
-    "rxjs": "^5.0.0-rc.4",
+    "rxjs": "^5.0.1",
     "style-loader": "0.13.1",
     "tslint": "^4.0.2",
-    "typescript": "~2.1.4",
+    "typescript": "^2.1.5",
     "vcl-core-modules": "^0.1.1",
     "vcl-default-theme": "^0.1.2",
     "vcl-default-theme-terms": "^0.1.0",
     "vcl-font-awesome": "^0.1.0",
     "vcl-preprocessor": "^0.1.1",
-    "webpack": "2.1.0-beta.27",
-    "webpack-dev-server": "2.1.0-beta.11",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0",
     "zone.js": "^0.7.2"
   },
   "dependencies": {
