--- a/package.json
+++ b/package.json
@@ -60,44 +60,43 @@
     "@types/core-js": "~0.9.34",
     "@types/marked": "~0.0.28",
     "@types/requirejs": "~2.1.28",
-    "@types/tether": "^1.4.0",
+    "@types/tether": "~1.4.0",
     "angular2-template-loader": "~0.6.0",
-    "autoprefixer": "^6.6.1",
+    "autoprefixer": "~6.6.1",
     "awesome-typescript-loader": "3.0.0-beta.18",
-    "browser-sync": "^2.18.2",
-    "connect-history-api-fallback": "1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "core-js": "2.4.1",
-    "cpr": "^2.0.2",
-    "css-loader": "^0.26.0",
-    "express": "4.14.0",
+    "browser-sync": "~2.18.2",
+    "connect-history-api-fallback": "~1.3.0",
+    "copy-webpack-plugin": "~4.0.1",
+    "core-js": "~2.4.1",
+    "cpr": "~2.0.2",
+    "css-loader": "~0.26.0",
     "extract-text-webpack-plugin": "2.0.0-beta.5",
-    "fsmonitor": "0.2.4",
-    "fuse.js": "^2.5.0",
-    "git-directory-deploy": "^1.5.1",
-    "highlight-loader": "^0.7.2",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.24.1",
-    "ignore-loader": "^0.1.2",
-    "json-loader": "0.5.4",
-    "markdown-loader": "^0.1.7",
-    "marked": "^0.3.6",
-    "npm-run-all": "4.0.0",
-    "postcss-cli": "2.6.0",
-    "pre-commit": "^1.1.3",
-    "raw-loader": "0.5.1",
-    "rimraf": "^2.5.4",
+    "fsmonitor": "~0.2.4",
+    "fuse.js": "~2.6.1",
+    "git-directory-deploy": "~1.5.1",
+    "highlight-loader": "~0.7.2",
+    "html-loader": "~0.4.4",
+    "html-webpack-plugin": "~2.26.0",
+    "ignore-loader": "~0.1.2",
+    "json-loader": "~0.5.4",
+    "markdown-loader": "~0.1.7",
+    "marked": "~0.3.6",
+    "npm-run-all": "~4.0.1",
+    "postcss-cli": "~2.6.0",
+    "pre-commit": "~1.2.2",
+    "raw-loader": "~0.5.1",
+    "rimraf": "~2.5.4",
     "rxjs": "^5.0.1",
-    "style-loader": "0.13.1",
+    "style-loader": "~0.13.1",
     "tslint": "^4.0.2",
     "typescript": "^2.1.5",
-    "vcl-core-modules": "^0.1.1",
-    "vcl-default-theme": "^0.1.2",
-    "vcl-default-theme-terms": "^0.1.0",
-    "vcl-font-awesome": "^0.1.0",
-    "vcl-preprocessor": "^0.1.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0",
+    "vcl-core-modules": "~0.1.1",
+    "vcl-default-theme": "~0.1.2",
+    "vcl-default-theme-terms": "~0.1.0",
+    "vcl-font-awesome": "~0.1.0",
+    "vcl-preprocessor": "~0.1.1",
+    "webpack": "~2.2.0",
+    "webpack-dev-server": "~2.2.0",
     "zone.js": "^0.7.2"
   },
   "dependencies": {
