--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,12 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
-    "types": [
-      "core-js",
-      "requirejs"
+    "lib": [
+      "dom",
+      "es6",
+      "dom.iterable",
+      "scripthost",
+      "es2016.array.include"
     ]
   },
   "include": [
