--- a/package.json
+++ b/package.json
@@ -48,23 +48,21 @@
     "rxjs": "^5.0.3"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.4",
-    "@angular/compiler": "^2.4.4",
-    "@angular/compiler-cli": "^2.4.4",
-    "@angular/core": "^2.4.4",
-    "@angular/forms": "^2.4.4",
-    "@angular/http": "^2.4.4",
-    "@angular/platform-browser": "^2.4.4",
-    "@angular/platform-browser-dynamic": "^2.4.4",
-    "@angular/router": "^3.4.4",
+    "@angular/common": "^2.4.5",
+    "@angular/compiler": "^2.4.5",
+    "@angular/compiler-cli": "^2.4.5",
+    "@angular/core": "^2.4.5",
+    "@angular/forms": "^2.4.5",
+    "@angular/http": "^2.4.5",
+    "@angular/platform-browser": "^2.4.5",
+    "@angular/platform-browser-dynamic": "^2.4.5",
+    "@angular/router": "^3.4.5",
     "@types/marked": "~0.0.28",
     "@types/requirejs": "~2.1.28",
     "@types/tether": "~1.4.0",
     "angular2-template-loader": "~0.6.0",
-    "autoprefixer": "~6.7.0",
+    "autoprefixer": "~6.7.2",
     "awesome-typescript-loader": "3.0.0-beta.18",
-    "browser-sync": "~2.18.6",
-    "connect-history-api-fallback": "~1.3.0",
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
     "cpr": "~2.0.2",
@@ -75,7 +73,7 @@
     "git-directory-deploy": "~1.5.1",
     "highlight-loader": "~0.7.2",
     "html-loader": "~0.4.4",
-    "html-webpack-plugin": "~2.26.0",
+    "html-webpack-plugin": "~2.28.0",
     "ignore-loader": "~0.1.2",
     "json-loader": "~0.5.4",
     "markdown-loader": "~0.1.7",
@@ -85,16 +83,16 @@
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "rimraf": "~2.5.4",
-    "rxjs": "^5.0.3",
+    "rxjs": "^5.1.0",
     "style-loader": "~0.13.1",
-    "tslint": "^4.3.1",
+    "tslint": "^4.4.2",
     "typescript": "^2.1.5",
     "vcl-core-modules": "~0.1.3",
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
     "vcl-font-awesome": "~0.1.0",
     "vcl-preprocessor": "~0.1.1",
-    "webpack": "~2.2.0",
+    "webpack": "^2.2.1",
     "webpack-dev-server": "~2.2.0",
     "zone.js": "^0.7.6"
   },
