--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@angular/platform-browser": "^2.4.5",
     "@angular/platform-browser-dynamic": "^2.4.5",
     "@angular/router": "^3.4.5",
-    "hammerjs": "^2.0.8",
+    "@types/gulp": "^3.8.32",
     "@types/marked": "~0.0.28",
     "@types/requirejs": "~2.1.28",
     "@types/tether": "~1.4.0",
@@ -79,6 +79,7 @@
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.0.2",
     "gulp-json-modify": "^1.0.2",
+    "hammerjs": "^2.0.8",
     "highlight-loader": "~0.7.2",
     "html-loader": "~0.4.4",
     "html-webpack-plugin": "~2.28.0",
