--- a/package.json
+++ b/package.json
@@ -48,12 +48,6 @@
     "rxjs": "^5.0.3",
     "hammerjs": "^2.0.8"
   },
-  "optionalDependencies": {
-    "attr-accept": "^1.1.0",
-    "jsoneditor": "^5.5.11",
-    "jsonschema": "^1.1.1",
-    "tether": "^1.4.0"
-  },
   "devDependencies": {
     "@angular/common": "^2.4.5",
     "@angular/compiler": "^2.4.5",
@@ -110,7 +104,11 @@
     "vcl-preprocessor": "~0.1.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "~2.2.0",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "attr-accept": "^1.1.0",
+    "jsoneditor": "^5.5.11",
+    "jsonschema": "^1.1.1",
+    "tether": "^1.4.0"
   },
   "pre-commit": [
     "lint"
