--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -19,7 +19,5 @@
     "rxjs": "^5.0.3",
     "hammerjs": "^2.0.8"
   },
-  "dependencies": {
-    "attr-accept": "^1.1.0"
-  }
+  "dependencies": { }
 }
