--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -16,8 +16,7 @@
     "@angular/core": "^2.3.0",
     "@angular/forms": "^2.3.0",
     "@angular/router": "^3.3.0",
-    "rxjs": "^5.0.3",
-    "hammerjs": "^2.0.8"
+    "rxjs": "^5.0.3"
   },
   "dependencies": { }
 }
