--- a/package.json
+++ b/package.json
@@ -50,22 +50,22 @@
     "hammerjs": "^2.0.8"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.5",
-    "@angular/compiler": "^2.4.5",
-    "@angular/compiler-cli": "^2.4.5",
-    "@angular/core": "^2.4.5",
-    "@angular/forms": "^2.4.5",
-    "@angular/http": "^2.4.5",
-    "@angular/platform-browser": "^2.4.5",
-    "@angular/platform-browser-dynamic": "^2.4.5",
-    "@angular/router": "^3.4.5",
+    "@angular/common": "^2.4.8",
+    "@angular/compiler": "^2.4.8",
+    "@angular/compiler-cli": "^2.4.8",
+    "@angular/core": "^2.4.8",
+    "@angular/forms": "^2.4.8",
+    "@angular/http": "^2.4.8",
+    "@angular/platform-browser": "^2.4.8",
+    "@angular/platform-browser-dynamic": "^2.4.8",
+    "@angular/router": "^3.4.8",
     "@types/gulp": "^3.8.32",
     "@types/marked": "~0.0.28",
     "@types/node": "^7.0.5",
     "@types/tether": "~1.4.0",
     "angular2-template-loader": "~0.6.0",
-    "autoprefixer": "~6.7.2",
-    "awesome-typescript-loader": "3.0.4-rc.2",
+    "autoprefixer": "^6.7.5",
+    "awesome-typescript-loader": "^3.0.7",
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
     "cpr": "~2.0.2",
@@ -73,7 +73,7 @@
     "es6-promisify": "^5.0.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "fsmonitor": "~0.2.4",
-    "fuse.js": "~2.6.1",
+    "fuse.js": "^2.6.2",
     "git-directory-deploy": "~1.5.1",
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.0.2",
@@ -86,29 +86,29 @@
     "json-loader": "~0.5.4",
     "jsoneditor": "^5.5.11",
     "jsonschema": "^1.1.1",
-    "markdown-loader": "~0.1.7",
+    "markdown-loader": "^2.0.0",
     "marked": "~0.3.6",
-    "npm-run-all": "~4.0.1",
+    "npm-run-all": "^4.0.2",
     "plotly.js": "^1.23.1",
     "postcss-cli": "~2.6.0",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
-    "rimraf": "~2.5.4",
+    "rimraf": "^2.6.1",
     "run-sequence": "^1.2.2",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.2.0",
     "style-loader": "~0.13.1",
     "ts-node": "^2.1.0",
     "tslint": "^4.4.2",
-    "typescript": "^2.1.5",
+    "typescript": "^2.2.1",
     "vcl-core-modules": "~0.1.3",
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
     "vcl-font-awesome": "~0.1.0",
     "vcl-preprocessor": "~0.1.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "~2.2.0",
-    "zone.js": "^0.7.6"
+    "webpack-dev-server": "^2.4.1",
+    "zone.js": "^0.7.7"
   },
   "pre-commit": [
     "lint"
