--- a/src/json-editor/package.json
+++ b/src/json-editor/package.json
@@ -15,8 +15,7 @@
     "@angular/common": "^2.3.0",
     "@angular/core": "^2.3.0",
     "@angular/forms": "^2.3.0",
-    "rxjs": "^5.0.3",
-    "@ng-vcl/ng-vcl": "^0.1.0"
+    "rxjs": "^5.0.3"
   },
   "dependencies": {
     "jsoneditor": "^5.5.11"
