--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "A comprehensive library of components for Angular 2 with VCL based styling",
   "scripts": {
     "lint": "npm-run-all lint:src lint:demo",
@@ -17,6 +17,7 @@
     "build:clean": "rimraf dist",
     "build:gulp": "gulp build",
     "build": "npm-run-all lint:src build:clean build:gulp",
+    "publish": "gulp publish",
     "clean": "npm-run-all build:clean docs:clean",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
     "postinstall": "ts-node scripts/postinstall.ts",
@@ -49,65 +50,65 @@
     "hammerjs": "^2.0.8"
   },
   "devDependencies": {
-    "@angular/common": "^2.4.5",
-    "@angular/compiler": "^2.4.5",
-    "@angular/compiler-cli": "^2.4.5",
-    "@angular/core": "^2.4.5",
-    "@angular/forms": "^2.4.5",
-    "@angular/http": "^2.4.5",
-    "@angular/platform-browser": "^2.4.5",
-    "@angular/platform-browser-dynamic": "^2.4.5",
-    "@angular/router": "^3.4.5",
+    "@angular/common": "^2.4.9",
+    "@angular/compiler": "^2.4.9",
+    "@angular/compiler-cli": "^2.4.9",
+    "@angular/core": "^2.4.9",
+    "@angular/forms": "^2.4.9",
+    "@angular/http": "^2.4.9",
+    "@angular/platform-browser": "^2.4.9",
+    "@angular/platform-browser-dynamic": "^2.4.9",
+    "@angular/router": "^3.4.9",
     "@types/gulp": "^3.8.32",
     "@types/marked": "~0.0.28",
     "@types/node": "^7.0.5",
     "@types/tether": "~1.4.0",
-    "angular2-template-loader": "~0.6.0",
-    "autoprefixer": "~6.7.2",
-    "awesome-typescript-loader": "3.0.4-rc.2",
+    "angular2-template-loader": "~0.6.2",
+    "autoprefixer": "~6.7.6",
+    "awesome-typescript-loader": "3.1.1",
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
     "cpr": "~2.0.2",
-    "css-loader": "~0.26.1",
+    "css-loader": "~0.26.2",
     "es6-promisify": "^5.0.0",
-    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "fsmonitor": "~0.2.4",
-    "fuse.js": "~2.6.1",
+    "fuse.js": "~2.6.2",
     "git-directory-deploy": "~1.5.1",
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.0.2",
     "gulp-json-modify": "^1.0.2",
     "hammerjs": "^2.0.8",
     "highlight-loader": "~0.7.2",
-    "html-loader": "~0.4.4",
+    "html-loader": "~0.4.5",
     "html-webpack-plugin": "~2.28.0",
     "ignore-loader": "~0.1.2",
     "json-loader": "~0.5.4",
     "jsoneditor": "^5.5.11",
     "jsonschema": "^1.1.1",
-    "markdown-loader": "~0.1.7",
+    "markdown-loader": "~2.0.0",
     "marked": "~0.3.6",
-    "npm-run-all": "~4.0.1",
-    "plotly.js": "^1.23.1",
-    "postcss-cli": "~2.6.0",
+    "npm-run-all": "~4.0.2",
+    "plotly.js": "^1.24.0",
+    "postcss-cli": "~3.0.0-beta",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
-    "rimraf": "~2.5.4",
+    "rimraf": "~2.6.1",
     "run-sequence": "^1.2.2",
-    "rxjs": "^5.1.0",
-    "style-loader": "~0.13.1",
+    "rxjs": "^5.2.0",
+    "style-loader": "~0.13.2",
     "ts-node": "^2.1.0",
-    "tslint": "^4.4.2",
-    "typescript": "^2.1.5",
+    "tslint": "^4.5.1",
+    "typescript": "^2.2.1",
     "vcl-core-modules": "~0.1.3",
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
     "vcl-font-awesome": "~0.1.0",
     "vcl-preprocessor": "~0.1.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "~2.2.0",
-    "zone.js": "^0.7.6"
+    "webpack-dev-server": "~2.4.1",
+    "zone.js": "^0.7.7"
   },
   "pre-commit": [
     "lint"
