--- a/src/plotly/package.json
+++ b/src/plotly/package.json
@@ -14,8 +14,8 @@
   "peerDependencies": {
     "@angular/common": "^2.3.0",
     "@angular/core": "^2.3.0",
-    "rxjs": "^5.0.3",
-    "@ng-vcl/ng-vcl": "^0.1.0"
+    "@ng-vcl/ng-vcl": "^0.1.0",
+    "rxjs": "^5.0.3"
   },
   "dependencies": {
     "plotly.js": "^1.22.0"
