--- a/package.json
+++ b/package.json
@@ -35,33 +35,35 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "^2.4.9",
-    "@angular/compiler": "^2.4.9",
-    "@angular/compiler-cli": "^2.4.9",
-    "@angular/core": "^2.4.9",
-    "@angular/forms": "^2.4.9",
-    "@angular/http": "^2.4.9",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/router": "^3.4.9",
-    "@types/gulp": "^3.8.32",
+    "@angular/animations": "^4.0.0-rc.6",
+    "@angular/common": "^4.0.0-rc.6",
+    "@angular/compiler": "^4.0.0-rc.6",
+    "@angular/compiler-cli": "^4.0.0-rc.6",
+    "@angular/core": "^4.0.0-rc.6",
+    "@angular/forms": "^4.0.0-rc.6",
+    "@angular/http": "^4.0.0-rc.6",
+    "@angular/platform-browser": "^4.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "^4.0.0-rc.6",
+    "@angular/router": "^4.0.0-rc.6",
+    "@types/gulp": "^4.0.2",
     "@types/marked": "~0.0.28",
     "@types/node": "^7.0.5",
     "@types/tether": "~1.4.0",
     "angular2-template-loader": "~0.6.2",
     "autoprefixer": "~6.7.6",
-    "awesome-typescript-loader": "3.1.1",
+    "awesome-typescript-loader": "^3.1.2",
+    "chance": "^1.0.6",
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
     "cpr": "~2.0.2",
-    "css-loader": "~0.26.2",
+    "css-loader": "^0.27.3",
     "es6-promisify": "^5.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "fsmonitor": "~0.2.4",
     "fuse.js": "~2.6.2",
     "git-directory-deploy": "~1.5.1",
     "gulp": "^3.9.1",
-    "gulp-better-rollup": "^1.0.2",
+    "gulp-better-rollup": "^1.1.1",
     "gulp-json-modify": "^1.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
@@ -77,8 +79,8 @@
     "marked": "~0.3.6",
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
-    "plotly.js": "^1.24.0",
-    "postcss-cli": "~3.0.0-beta",
+    "plotly.js": "^1.25.0",
+    "postcss-cli": "~3.0.0",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
@@ -86,8 +88,8 @@
     "rollup-plugin-replace": "^1.1.1",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.2.0",
-    "style-loader": "~0.13.2",
-    "ts-node": "^2.1.0",
+    "style-loader": "^0.15.0",
+    "ts-node": "^3.0.2",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
     "vcl-core-modules": "~0.1.3",
@@ -95,9 +97,9 @@
     "vcl-default-theme-terms": "~0.1.0",
     "vcl-font-awesome": "~0.1.0",
     "vcl-preprocessor": "~0.1.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "~2.4.1",
-    "zone.js": "^0.7.7"
+    "webpack": "^2.3.0",
+    "webpack-dev-server": "^2.4.2",
+    "zone.js": "^0.8.5"
   },
   "pre-commit": [
     "lint"
