--- a/src/jss-form/package.json
+++ b/src/jss-form/package.json
@@ -12,12 +12,10 @@
   "module": "jss-form.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^2.3.0",
-    "@angular/core": "^2.3.0",
-    "@angular/forms": "^2.3.0",
-    "rxjs": "^5.0.3",
-    "hammerjs": "^2.0.8",
-    "@ng-vcl/ng-vcl": "^0.3.0"
+    "@angular/common": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "rxjs": "^5.0.1"
   },
   "dependencies": {
     "jsonschema": "^1.1.1"
