--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@ng-vcl/ng-vcl",
   "version": "0.3.1-1",
-  "description": "A comprehensive library of components for Angular 2 with VCL based styling",
+  "description": "A comprehensive library of components for Angular 4 with VCL based styling",
   "scripts": {
     "lint": "npm-run-all lint:src lint:demo",
     "lint:src": "tslint './src/**/*.ts'",
     "lint:demo": "tslint './demo/**/*.ts'",
-    "dev:aot": "npm-run-all dev:vcl --parallel \"dev:serve -- --env.AOT=true --env.DEMO={*}\" dev:styles --",
-    "dev": "npm-run-all dev:vcl --parallel \"dev:serve -- --env.DEMO={*}\" dev:styles --",
-    "dev:serve": "webpack-dev-server --config webpack.config.js --env.ENV development --env.HMR true",
+    "dev:aot": "npm-run-all dev:vcl --parallel dev:serve --env.AOT=true dev:styles",
+    "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
+    "dev:serve": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.HMR=true",
     "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
     "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
     "docs:clean": "rimraf docs",
@@ -37,20 +37,19 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@ngtools/webpack": "^1.3.0",
+    "@angular/animations": "^4.0.3",
+    "@angular/common": "^4.0.3",
+    "@angular/compiler": "^4.0.3",
+    "@angular/compiler-cli": "^4.0.3",
+    "@angular/core": "^4.0.3",
+    "@angular/forms": "^4.0.3",
+    "@angular/http": "^4.0.3",
+    "@angular/platform-browser": "^4.0.3",
+    "@angular/platform-browser-dynamic": "^4.0.3",
+    "@angular/router": "^4.0.3",
+    "@ngtools/webpack": "^1.3.1",
     "@types/gulp": "^4.0.2",
-    "@types/marked": "~0.0.28",
-    "@types/node": "^7.0.5",
+    "@types/node": "^7.0.13",
     "@types/tether": "~1.4.0",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "~0.6.2",
@@ -60,7 +59,7 @@
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
     "cpr": "~2.0.2",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.0",
     "es6-promisify": "^5.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "fsmonitor": "~0.2.4",
@@ -77,14 +76,14 @@
     "html-webpack-plugin": "~2.28.0",
     "ignore-loader": "~0.1.2",
     "json-loader": "~0.5.4",
-    "jsoneditor": "^5.5.11",
+    "jsoneditor": "^5.6.0",
     "jsonschema": "^1.1.1",
     "markdown-loader": "^2.0.0",
     "marked": "~0.3.6",
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
-    "plotly.js": "^1.25.0",
-    "postcss-cli": "~3.0.0",
+    "plotly.js": "^1.26.1",
+    "postcss-cli": "^3.2.0",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
@@ -92,17 +91,17 @@
     "rollup-plugin-replace": "^1.1.1",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.2.0",
-    "style-loader": "^0.15.0",
+    "style-loader": "^0.16.1",
     "ts-node": "^3.0.2",
-    "tslint": "^4.5.1",
-    "typescript": "~2.1.6",
-    "vcl-core-modules": "~0.1.3",
+    "tslint": "^5.1.0",
+    "typescript": "^2.2.2",
+    "vcl-core-modules": "^0.1.4",
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
     "vcl-font-awesome": "~0.1.0",
     "vcl-preprocessor": "~0.1.1",
-    "webpack": "^2.3.0",
-    "webpack-dev-server": "^2.4.2",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.4",
     "zone.js": "^0.8.5"
   },
   "pre-commit": [
