--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "lint": "npm-run-all lint:src lint:demo",
     "lint:src": "tslint './src/**/*.ts'",
     "lint:demo": "tslint './demo/**/*.ts'",
-    "dev:aot": "npm-run-all dev:vcl --parallel dev:serve --env.AOT=true dev:styles",
-    "dev": "npm-run-all dev:vcl --parallel dev:serve dev:styles",
-    "dev:serve": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.HMR=true",
-    "dev:vcl": "vcl-preprocessor demo/styles/index.styl | postcss --use autoprefixer -o demo/app.css",
-    "dev:styles": "fsmonitor -d 'demo/styles' npm run dev:vcl",
+    "dev": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.HMR=true",
+    "dev:aot": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.HMR=true --env.AOT=true",
     "docs:clean": "rimraf docs",
     "docs:build": "webpack --config webpack.config.js --env.ENV production",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
@@ -83,7 +80,7 @@
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
     "plotly.js": "^1.26.1",
-    "postcss-cli": "^3.2.0",
+    "postcss-loader": "^1.3.3",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
@@ -99,6 +96,7 @@
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
     "vcl-font-awesome": "~0.1.0",
+    "vcl-loader": "github:vcl/loader",
     "vcl-preprocessor": "~0.1.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4",
