--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.1.2",
-    "@angular/common": "^4.1.2",
-    "@angular/compiler": "^4.1.2",
-    "@angular/compiler-cli": "^4.1.2",
-    "@angular/core": "^4.1.2",
-    "@angular/forms": "^4.1.2",
-    "@angular/http": "^4.1.2",
-    "@angular/platform-browser": "^4.1.2",
-    "@angular/platform-browser-dynamic": "^4.1.2",
-    "@angular/router": "^4.1.2",
+    "@angular/animations": "4.2.0-rc.1",
+    "@angular/common": "4.2.0-rc.1",
+    "@angular/compiler": "4.2.0-rc.1",
+    "@angular/compiler-cli": "4.2.0-rc.1",
+    "@angular/core": "4.2.0-rc.1",
+    "@angular/forms": "4.2.0-rc.1",
+    "@angular/http": "4.2.0-rc.1",
+    "@angular/platform-browser": "4.2.0-rc.1",
+    "@angular/platform-browser-dynamic": "4.2.0-rc.1",
+    "@angular/router": "4.2.0-rc.1",
     "@ngtools/webpack": "^1.3.1",
     "@types/gulp": "^4.0.2",
     "@types/node": "^7.0.18",
