--- a/package.json
+++ b/package.json
@@ -45,22 +45,22 @@
     "@angular/platform-browser": "4.2.0-rc.2",
     "@angular/platform-browser-dynamic": "4.2.0-rc.2",
     "@angular/router": "4.2.0-rc.2",
-    "@ngtools/webpack": "^1.3.1",
+    "@ngtools/webpack": "^1.4.0",
     "@types/gulp": "^4.0.2",
     "@types/node": "^7.0.18",
     "@types/tether": "~1.4.0",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "~0.6.2",
-    "autoprefixer": "~6.7.6",
+    "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "chance": "^1.0.8",
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
-    "cpr": "~2.0.2",
+    "cpr": "^2.1.0",
     "css-loader": "^0.28.1",
     "es6-promisify": "^5.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "fsmonitor": "~0.2.4",
     "fuse.js": "~2.6.2",
     "git-directory-deploy": "~1.5.1",
@@ -82,7 +82,7 @@
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
     "plotly.js": "^1.26.1",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.0.5",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
@@ -90,9 +90,9 @@
     "rollup-plugin-replace": "^1.1.1",
     "run-sequence": "^1.2.2",
     "rxjs": "^5.3.1",
-    "style-loader": "^0.17.0",
+    "style-loader": "^0.18.2",
     "ts-node": "^3.0.4",
-    "tslint": "^5.2.0",
+    "tslint": "^5.4.2",
     "typescript": "^2.3.2",
     "url-loader": "^0.5.8",
     "vcl-core-modules": "^0.1.4",
