--- a/package.json
+++ b/package.json
@@ -35,25 +35,25 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.2.0",
-    "@angular/common": "^4.2.0",
-    "@angular/compiler": "^4.2.0",
-    "@angular/compiler-cli": "^4.2.0",
-    "@angular/core": "^4.2.0",
-    "@angular/forms": "^4.2.0",
-    "@angular/http": "^4.2.0",
-    "@angular/platform-browser": "^4.2.0",
-    "@angular/platform-browser-dynamic": "^4.2.0",
-    "@angular/router": "^4.2.0",
+    "@angular/animations": "^4.2.3",
+    "@angular/common": "^4.2.3",
+    "@angular/compiler": "^4.2.3",
+    "@angular/compiler-cli": "^4.2.3",
+    "@angular/core": "^4.2.3",
+    "@angular/forms": "^4.2.3",
+    "@angular/http": "^4.2.3",
+    "@angular/platform-browser": "^4.2.3",
+    "@angular/platform-browser-dynamic": "^4.2.3",
+    "@angular/router": "^4.2.3",
     "@ngtools/webpack": "^1.4.0",
     "@types/gulp": "^4.0.2",
-    "@types/node": "^7.0.18",
-    "@types/tether": "~1.4.0",
+    "@types/node": "^7.0.31",
+    "@types/tether": "^1.4.2",
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "~0.6.2",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
-    "chance": "^1.0.8",
+    "chance": "^1.0.10",
     "copy-webpack-plugin": "~4.0.1",
     "core-js": "~2.4.1",
     "cpr": "^2.1.0",
@@ -82,19 +82,19 @@
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
     "plotly.js": "^1.26.1",
-    "postcss-loader": "^2.0.5",
+    "postcss-loader": "^2.0.6",
     "pre-commit": "~1.2.2",
     "raw-loader": "~0.5.1",
     "resolve-bin": "^0.4.0",
     "rimraf": "^2.6.1",
     "rollup-plugin-replace": "^1.1.1",
     "run-sequence": "^1.2.2",
-    "rxjs": "^5.3.1",
+    "rxjs": "^5.4.1",
     "style-loader": "^0.18.2",
     "ts-node": "^3.0.4",
     "tslint": "^5.4.2",
     "typescript": "^2.3.2",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.5.9",
     "vcl-core-modules": "^0.1.4",
     "vcl-default-theme": "~0.1.3",
     "vcl-default-theme-terms": "~0.1.0",
