--- a/src/animations/package.json
+++ b/src/animations/package.json
@@ -12,10 +12,8 @@
   "module": "animations.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^4.2.0",
     "@angular/core": "^4.2.0",
-    "@angular/forms": "^4.2.0",
-    "rxjs": "^5.0.1",
+    "@angular/animations": "^4.2.0",
     "@ng-vcl/ng-vcl": "^0.3.0"
   }
 }
