--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -13,6 +13,7 @@
   "typings": "index.d.ts",
   "peerDependencies": {
     "@angular/common": "^4.2.0",
+    "@angular/animations": "^4.2.0",
     "@angular/core": "^4.2.0",
     "@angular/forms": "^4.2.0",
     "@angular/router": "^4.2.0",
