--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "publish:git:ng-vcl-c": "git-directory-deploy --directory dist/@ng-vcl/ng-vcl-compatibility --branch dist_v0.3-compatibility",
     "clean": "npm-run-all build:clean docs:clean",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
-    "postinstall": "ts-node scripts/postinstall.ts",
+    "postinstall": "ts-node --compilerOptions '{\"target\":\"es5\",\"module\":\"CommonJS\"}'  scripts/postinstall.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
