--- a/package.json
+++ b/package.json
@@ -35,74 +35,81 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.2.5",
-    "@angular/common": "^4.2.5",
-    "@angular/compiler": "^4.2.5",
-    "@angular/compiler-cli": "^4.2.5",
-    "@angular/core": "^4.2.5",
-    "@angular/forms": "^4.2.5",
-    "@angular/http": "^4.2.5",
-    "@angular/platform-browser": "^4.2.5",
-    "@angular/platform-browser-dynamic": "^4.2.5",
-    "@angular/router": "^4.2.5",
+    "@angular/animations": "^4.2.6",
+    "@angular/common": "^4.2.6",
+    "@angular/compiler": "^4.2.6",
+    "@angular/compiler-cli": "^4.2.6",
+    "@angular/core": "^4.2.6",
+    "@angular/forms": "^4.2.6",
+    "@angular/http": "^4.2.6",
+    "@angular/platform-browser": "^4.2.6",
+    "@angular/platform-browser-dynamic": "^4.2.6",
+    "@angular/router": "^4.2.6",
     "@ngtools/webpack": "^1.5.0",
     "@types/gulp": "^4.0.2",
-    "@types/node": "^7.0.33",
+    "@types/node": "^8.0.9",
     "@types/tether": "^1.4.2",
+    "@vcl/breakpoints": "^0.2.0",
+    "@vcl/core-modules": "^0.2.0",
+    "@vcl/default-theme": "^0.2.1",
+    "@vcl/default-theme-terms": "^0.2.1",
+    "@vcl/font-awesome": "^0.2.0",
+    "@vcl/preprocessor": "^0.2.2",
     "angular-router-loader": "^0.6.0",
-    "angular2-template-loader": "~0.6.2",
-    "autoprefixer": "^7.1.1",
+    "angular2-template-loader": "^0.6.2",
+    "autoprefixer": "^7.1.2",
     "awesome-typescript-loader": "^3.2.1",
     "chance": "^1.0.10",
-    "copy-webpack-plugin": "~4.0.1",
-    "core-js": "~2.4.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "core-js": "^2.4.1",
     "cpr": "^2.2.0",
     "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
     "es6-promisify": "^5.0.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^3.0.0-rc.2",
     "file-loader": "^0.11.2",
-    "fsmonitor": "~0.2.4",
-    "fuse.js": "~2.6.2",
-    "git-directory-deploy": "~1.5.1",
+    "fsmonitor": "^0.2.4",
+    "fuse.js": "^2.7.4",
+    "git-directory-deploy": "^1.5.1",
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^1.1.1",
     "gulp-json-modify": "^1.0.2",
     "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
+    "gulp-replace": "^0.6.1",
     "hammerjs": "^2.0.8",
-    "highlight-loader": "~0.7.2",
+    "highlight-loader": "^0.7.2",
     "html-loader": "^0.4.5",
-    "html-webpack-plugin": "~2.28.0",
-    "ignore-loader": "~0.1.2",
-    "json-loader": "~0.5.4",
-    "jsoneditor": "^5.7.2",
+    "html-webpack-plugin": "^2.29.0",
+    "ignore-loader": "^0.1.2",
+    "json-loader": "^0.5.4",
+    "jsoneditor": "^5.8.2",
     "jsonschema": "^1.1.1",
-    "markdown-loader": "^2.0.0",
-    "marked": "~0.3.6",
+    "markdown-loader": "^2.0.1",
+    "marked": "^0.3.6",
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.0.2",
     "plotly.js": "^1.28.3",
+    "postcss-color-function": "^4.0.0",
+    "postcss-css-variables": "^0.7.0",
+    "postcss-easy-import": "^2.1.0",
     "postcss-loader": "^2.0.6",
-    "pre-commit": "~1.2.2",
-    "raw-loader": "~0.5.1",
+    "postcss-nesting": "^4.0.1",
+    "pre-commit": "^1.2.2",
+    "raw-loader": "^0.5.1",
     "resolve-bin": "^0.4.0",
     "rimraf": "^2.6.1",
     "rollup-plugin-replace": "^1.1.1",
-    "run-sequence": "^1.2.2",
-    "rxjs": "^5.4.1",
+    "rucksack-css": "^0.9.1",
+    "run-sequence": "^2.0.0",
+    "rxjs": "^5.4.2",
     "style-loader": "^0.18.2",
-    "ts-node": "^3.1.0",
-    "tslint": "^5.4.2",
+    "sugarss": "^1.0.0",
+    "ts-node": "^3.2.0",
+    "tslint": "^5.5.0",
     "typescript": "^2.3.4",
     "url-loader": "^0.5.9",
-    "vcl-core-modules": "^0.1.4",
-    "vcl-default-theme": "~0.1.3",
-    "vcl-default-theme-terms": "~0.1.0",
-    "vcl-font-awesome": "~0.1.0",
-    "vcl-loader": "github:vcl/loader",
-    "vcl-preprocessor": "~0.1.1",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0",
+    "webpack": "^3.1.0",
+    "webpack-dev-server": "^2.5.1",
     "zone.js": "^0.8.5"
   },
   "pre-commit": [
