--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/router": "^4.2.6",
     "@ngtools/webpack": "^1.5.0",
     "@types/gulp": "^4.0.2",
-    "@types/node": "^8.0.9",
+    "@types/node": "^8.0.10",
     "@types/tether": "^1.4.2",
     "@vcl/breakpoints": "^0.2.0",
     "@vcl/core-modules": "^0.2.0",
@@ -66,7 +66,7 @@
     "css-loader": "^0.28.1",
     "cssnano": "^3.10.0",
     "es6-promisify": "^5.0.0",
-    "extract-text-webpack-plugin": "^3.0.0-rc.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "fsmonitor": "^0.2.4",
     "fuse.js": "^2.7.4",
@@ -82,7 +82,7 @@
     "html-webpack-plugin": "^2.29.0",
     "ignore-loader": "^0.1.2",
     "json-loader": "^0.5.4",
-    "jsoneditor": "^5.8.2",
+    "jsoneditor": "^5.9.0",
     "jsonschema": "^1.1.1",
     "markdown-loader": "^2.0.1",
     "marked": "^0.3.6",
@@ -106,7 +106,7 @@
     "sugarss": "^1.0.0",
     "ts-node": "^3.2.0",
     "tslint": "^5.5.0",
-    "typescript": "^2.3.4",
+    "typescript": "^2.4.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
     "webpack-dev-server": "^2.5.1",
