--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
       "@ng-vcl/store/*": ["src/store/*"],
       "@ng-vcl/json-editor": ["src/json-editor"],
       "@ng-vcl/json-editor/*": ["src/json-editor/*"],
+      "@ng-vcl/jss-form": ["src/jss-form"],
+      "@ng-vcl/jss-form/*": ["src/jss-form/*"],
       "@ng-vcl/plotly": ["src/plotly"],
       "@ng-vcl/plotly/*": ["src/plotly/*"],
       "@ng-vcl/animations": ["src/animations"],
