--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/animations": "^5.0.0-rc.9",
+    "@angular/common": "^5.0.0-rc.9",
+    "@angular/compiler": "^5.0.0-rc.9",
+    "@angular/compiler-cli": "^5.0.0-rc.9",
+    "@angular/core": "^5.0.0-rc.9",
+    "@angular/forms": "^5.0.0-rc.9",
+    "@angular/http": "^5.0.0-rc.9",
+    "@angular/platform-browser": "^5.0.0-rc.9",
+    "@angular/platform-browser-dynamic": "^5.0.0-rc.9",
+    "@angular/router": "^5.0.0-rc.9",
     "@ngtools/webpack": "^1.7.4",
     "@types/gulp": "^4.0.5",
     "@types/node": "^8.0.47",
