--- a/tools/webpack-helper/package.json
+++ b/tools/webpack-helper/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-vcl/webpack-helper",
-  "version": "0.1.0-3",
+  "version": "0.1.0",
   "description": "Helper for VCL support in Angular CLI",
   "main": "index.js",
   "homepage": "https://github.com/ng-vcl/ng-vcl",
