--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.8.0-10",
+  "version": "0.8.0-11",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
@@ -72,7 +72,7 @@
     "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "^7.2.15",
-    "@ng-vcl/webpack-helper": "0.1.0",
+    "@ng-vcl/webpack-helper": "^0.1.1",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.0.1",
