--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.8.0-13",
+  "version": "0.8.0",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
